# cctee

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile.server  Dockerfile.ui  README.md  build.sh  docker-compose.yml  install.sh
.github/workflows/: release.yml
cctee/: Cargo.toml
cctee-common/: Cargo.toml
cctee-common/src/: lib.rs
cctee-server/: Cargo.toml
cctee-server/src/: api.rs  main.rs  ws.rs
cctee-wrapper/: Cargo.toml
cctee-wrapper/src/: main.rs  pty.rs
cctee/src/: main.rs  pty.rs  ws_client.rs
src/: main.rs  sender.rs  server.rs  types.rs  wrapper.rs
teeclaude/: Cargo.toml
teeclaude-common/: Cargo.toml
teeclaude-common/src/: chat.rs  lib.rs  terminal.rs  token.rs
teeclaude-server/: Cargo.toml
teeclaude-server/src/: api.rs  main.rs  ws.rs
teeclaude-server/src/chat/: api.rs  mod.rs  ws.rs
teeclaude-server/src/terminal/: api.rs  mod.rs  ws.rs
teeclaude/src/: chat_handler.rs  config.rs  daemon.rs  gateway.rs  listener.rs  main.rs  pty.rs  url.rs  ws_client.rs
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/public/: manifest.json
ui/src/: App.css  App.tsx  db.ts  index.css  main.tsx  types.ts  use-events.ts  use-token.ts  use-websocket.ts  useSSE.ts
ui/src/app/: index.tsx  style.module.scss
ui/src/lib/: db.ts  types.ts  use-token.ts
ui/src/pages/chat/: db.ts  index.tsx  status.module.scss  status.tsx  style.module.scss  types.ts  use-chat.ts
ui/src/pages/mobile/: index.tsx  style.module.scss
ui/src/pages/status/: index.tsx
ui/src/pages/terminal/: db.ts  index.tsx  status.module.scss  status.tsx  style.module.scss  use-events.ts
ui/src/pages/terminal/desktop/: index.tsx  style.module.scss
ui/src/pages/terminal/mobile/: index.tsx  style.module.scss
ui/src/utils/: ansi-filter.ts
