[workspace]
resolver = "2"
members = ["cctee-common", "cctee-server", "cctee"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
