[package]
name = "cctee-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cctee-server"
path = "src/main.rs"

[dependencies]
cctee-common = { path = "../cctee-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
