[package]
name = "teeclaude-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "teeclaude-server"
path = "src/main.rs"

[dependencies]
teeclaude-common = { path = "../teeclaude-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
